--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">  
    <head>
       <meta charset = "utf-8">
-      <meta name="viewport" content="width=750, initial-scale=1">
+      <meta name="viewport" content="width=720px">
       <title>Pavel Pikirenia</title>
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="./css/windows.css">
@@ -46,7 +46,9 @@
             </td>
           </tr>
           <tr>
-            <td class="cell-image"></td>
+            <td>
+              <image src="./assets/photo.png" class="profile-photo"></image>
+            </td>
           </tr>
         </table>
         <!-- Introducation -->
@@ -315,6 +317,14 @@
                       <div class="list-item-nested">
                         <image class="inline-dash"></image>
                         <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                        &nbsp;Stash
+                      </div>
+                    </div>
+                    <div class="list-item2 collapsible-additional-software">
+                      <image class="vertical-dash"></image>
+                      <div class="list-item-nested">
+                        <image class="inline-dash"></image>
+                        <image src="./assets/icons/chip.svg" class="list-bullet"></image>
                         &nbsp;Git
                       </div>
                     </div>
@@ -441,6 +451,7 @@
                   <div class="list">
                     <input type="checkbox" id="wargaming"/>
                     <input type="checkbox" id="wargaming-technologies"/>
+                    <input type="checkbox" id="wargaming-responsibilities"/>
                     <div class="list-item">
                       <label for="wargaming">
                         <image class="list-bullet-collapsible-wargaming"></image>
@@ -540,6 +551,59 @@
                         <image class="inline-dash"></image>
                         <image src="./assets/icons/chip.svg" class="list-bullet"></image>
                         &nbsp;Nginx
+                      </div>
+                    </div>
+                    <div class="list-item2 collapsible-wargaming">
+                      <image class="vertical-dash"></image>
+                      <image class="vertical-dash-2 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-3 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-4 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-5 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-6 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-7 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-8 collapsible-wargaming-technologies"></image>
+                      <image class="vertical-dash-9 collapsible-wargaming-technologies"></image>
+                      <div class="list-item-root">
+                        <label for="wargaming-responsibilities">
+                          <image class="list-bullet-collapsible-wargaming-responsibilities"></image>
+                        </label>
+                        <div class="list-item-nested-root">
+                          <image class="inline-dash"></image>
+                          <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                          &nbsp;Responsibilities
+                        </div>
+                      </div>
+                    </div>
+                    <div class="list-item3 collapsible-wargaming collapsible-wargaming-responsibilities">
+                      <image class="vertical-dash"></image>
+                      <div class="list-item-nested">
+                        <image class="inline-dash"></image>
+                        <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                        &nbsp;Working on backend microservices
+                      </div>
+                    </div>
+                    <div class="list-item3 collapsible-wargaming collapsible-wargaming-responsibilities">
+                      <image class="vertical-dash"></image>
+                      <div class="list-item-nested">
+                        <image class="inline-dash"></image>
+                        <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                        &nbsp;Investigating production incidents
+                      </div>
+                    </div>
+                    <div class="list-item3 collapsible-wargaming collapsible-wargaming-responsibilities">
+                      <image class="vertical-dash"></image>
+                      <div class="list-item-nested">
+                        <image class="inline-dash"></image>
+                        <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                        &nbsp;Developing solutions for new features
+                      </div>
+                    </div>
+                    <div class="list-item3 collapsible-wargaming collapsible-wargaming-responsibilities">
+                      <image class="vertical-dash"></image>
+                      <div class="list-item-nested">
+                        <image class="inline-dash"></image>
+                        <image src="./assets/icons/chip.svg" class="list-bullet"></image>
+                        &nbsp;Conducting code review
                       </div>
                     </div>
                   </div>
