--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <head>
     <meta charset = "utf-8">
     <meta name="viewport" content="width=720">
+    <meta name="description" content="Backend Web Developer at Wargaming.">
     <title>Pavel Pikirenia</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/windows.css">
