--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </tr>
           <tr>
             <td>
-              <img src="./assets/photo.png" class="profile-photo"></img>
+              <img src="./assets/photo.png" height="239" width="180" class="profile-photo"></img>
             </td>
           </tr>
         </table>
@@ -565,7 +565,7 @@
                       <img class="vertical-dash"></img>
                       <div class="list-item-nested">
                         <img class="inline-dash"></img>
-                        <img src="./assets/icons/calendar.png" class="list-bullet"></img>
+                        <img src="./assets/icons/calendar.svg" class="list-bullet"></img>
                         <p>
                           &nbsp;Feb 2021 - now
                         </p>
@@ -773,7 +773,7 @@
                       <img class="vertical-dash"></img>
                       <div class="list-item-nested">
                         <img class="inline-dash"></img>
-                        <img src="./assets/icons/calendar.png" class="list-bullet"></img>
+                        <img src="./assets/icons/calendar.svg" class="list-bullet"></img>
                         <p>
                           &nbsp;Sep 2018 - Jun 2022
                         </p>
@@ -808,7 +808,7 @@
                       <img class="vertical-dash"></img>
                       <div class="list-item-nested">
                         <img class="inline-dash"></img>
-                        <img src="./assets/icons/calendar.png" class="list-bullet"></img>
+                        <img src="./assets/icons/calendar.svg" class="list-bullet"></img>
                         <p>
                           &nbsp;May 2021
                         </p>
