--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
    <head>
     <meta charset = "utf-8">
-    <meta name="viewport" content="width=720">
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="Backend Web Developer at Wargaming.">
     <title>Pavel Pikirenia</title>
     <link rel="stylesheet" href="/css/style.css">
