--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="icon" type="image/png" href="favicon-228.png" sizes="228x228">
     <link rel="shortcut icon" type="image/png" href="favicon-196.png" sizes="196x196">
 
-    <meta name = "theme-color" content = "#57A8A8">
+    <meta name = "theme-color" content = "#008080">
   </head>
 
   <body>
@@ -120,21 +120,21 @@
                     <div class="contacts-mobile">
                         <img src="./assets/icons/gmail-pixel.svg" class="list-bullet"></img>
                         <p>
-                          &nbsp;Email:&nbsp;
+                          &nbsp;<span class="contacts-mobile-prefix">Email:&nbsp;</span>
                           <a href = "mailto:pik.paval@gmail.com" target="_blank" rel="noopener noreferrer">pik.paval@gmail.com</a>
                         </p>
                     </div>
                     <div class="contacts-mobile">
                       <img src="./assets/icons/linkedin.svg" class="list-bullet"></img>
                       <p>
-                        &nbsp;LinkedIn:&nbsp;
+                        &nbsp;<span class="contacts-mobile-prefix">LinkedIn:&nbsp;</span>
                         <a href = "https://www.linkedin.com/in/pavel-pikirenia/" target="_blank" rel="noopener noreferrer">Pavel Pikirenia</a>
                       </p>
                     </div>
                     <div class="contacts-mobile">
                       <img src="./assets/icons/telegram-pixel.svg" class="list-bullet"></img>
                       <p>
-                        &nbsp;Telegram:&nbsp;
+                        &nbsp;<span class="contacts-mobile-prefix">Telegram:&nbsp;</span>
                         <a href = "https://t.me/the_mAyty" target="_blank" rel="noopener noreferrer">the_mAyty</a>
                       </p>
                     </div>
@@ -716,7 +716,7 @@
                         <img class="inline-dash"></img>
                         <img src="./assets/icons/responsibilities.svg" class="list-bullet"></img>
                         <p>
-                          &nbsp;Working on backend of microservices
+                          &nbsp;Working with microservices
                         </p>
                       </div>
                     </div>
@@ -726,7 +726,7 @@
                         <img class="inline-dash"></img>
                         <img src="./assets/icons/responsibilities.svg" class="list-bullet"></img>
                         <p>
-                          &nbsp;Investigating and fixing production incidents
+                          &nbsp;Handling production incidents
                         </p>
                       </div>
                     </div>
@@ -878,6 +878,7 @@
               <div class="doc-name">Photo</div>
               <div class="doc-name">Phot...</div>
               <div class="doc-name">Ph...</div>
+              <div class="doc-name">P...</div>
             </div>
           </label>
           <label for="contacts">
@@ -893,6 +894,7 @@
               <div class="doc-name">Skills</div>
               <div class="doc-name">Skills</div>
               <div class="doc-name">Skil...</div>
+              <div class="doc-name">Sk...</div>
             </div>
           </label>
           <label for="languages">
@@ -902,6 +904,7 @@
               <div class="doc-name">Langu...</div>
               <div class="doc-name">Lang...</div>
               <div class="doc-name">La...</div>
+              <div class="doc-name">L...</div>
             </div>
           </label>
           <label for="introduction">
@@ -911,6 +914,7 @@
               <div class="doc-name">Introdu...</div>
               <div class="doc-name">Intro...</div>
               <div class="doc-name">Intr...</div>
+              <div class="doc-name">Int...</div>
             </div>
           </label>
           <label for="experience">
@@ -920,6 +924,7 @@
               <div class="doc-name">Expiren...</div>
               <div class="doc-name">Expir...</div>
               <div class="doc-name">Exp...</div>
+              <div class="doc-name">Ex...</div>
             </div>
           </label>
           <label for="education">
@@ -929,6 +934,7 @@
               <div class="doc-name">Educat...</div>
               <div class="doc-name">Educ...</div>
               <div class="doc-name">Ed...</div>
+              <div class="doc-name">E...</div>
             </div>
           </label>
         </div>
